--- a/src/Debuggertools/Config/json/config.local.json
+++ b/src/Debuggertools/Config/json/config.local.json
@@ -1,1 +1,1 @@
-{"fileLog":{"folder":{"path":"dev/"},"defaultName":"log","defaultExtension":"log"},"prefixLog":{"defaultShowPrefix":true,"date":{"format":"Y\/m\/d.H:i:s","separator":" : "}}}
+{"fileLog":{"folder":{"path":"/dev/"},"defaultName":"log","defaultExtension":"log"},"prefixLog":{"defaultShowPrefix":true,"date":{"format":"Y\/m\/d.H:i:s","separator":" : "}}}
