--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,10 @@
         "php": "^7 || ^8"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.6"
+        "phpunit/phpunit": "^9.6",
+        "doctrine/orm": "^2.19",
+        "symfony/cache": "^5.4",
+        "doctrine/annotations": "^2.0"
     },
     "autoload": {
         "psr-4": {
