--- a/docker/nginx/host.conf
+++ b/docker/nginx/host.conf
@@ -24,7 +24,7 @@ server {
 
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
 
-        fastcgi_pass debuggertools-php-1:9000;
+        fastcgi_pass debuggertools-php73-1:9000;
         include fastcgi_params;
         fastcgi_split_path_info ^(.+\.php)(/.*)$;
         fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
